metadata/sf-prod/force-app/main/default/objects/workspan__AqEnv__c/workspan__AqEnv__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Environment Settings.</description>
    <label>WorkSpan - Environment Settings</label>
</CustomObject>