metadata/sf-prod/force-app/main/default/objects/workspan__AqEnv__c/fields/workspan__DebugMode__c.field-meta.xml
<CustomField>
    <fullName>workspan__DebugMode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, will show more information in error messages, which would normally be hidden from the user.</description>
    <inlineHelpText>When checked, will show more information in error messages, which would normally be hidden from the user.</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>