metadata/sf-prod/force-app/main/default/objects/workspan__AqEnv__c/fields/workspan__NowOverride__c.field-meta.xml
<CustomField>
    <fullName>workspan__NowOverride__c</fullName>
    <description>Overrides the &quot;now&quot; datetime used by all Aquiva apex code. If this is set, then Today Override is ignored.</description>
    <inlineHelpText>Overrides the &quot;now&quot; datetime used by all Aquiva apex code. If this is set, then Today Override is ignored.</inlineHelpText>
    <label>Now Override</label>
    <type>DateTime</type>
</CustomField>